updated css to fix horizontal scroll

--- a/oppio/src/components/layout.css
+++ b/oppio/src/components/layout.css
@@ -10,6 +10,10 @@ html {
   padding: 0;
   position: relative;
 }
+.App .slick-next  {
+  margin-right: 50px;
+  z-index: -50;
+}
 .App {
   margin-top: 50px;
 }
